// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders comment not found 1`] = `
<ForwardRef(forwardRef)
  className="PermalinkView-root coral coral-permalink coral-authenticated"
  size="double"
>
  <withContext(withMutation(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
    settings={Object {}}
    viewer={Object {}}
  />
  <ForwardRef(forwardRef)
    alignItems="center"
    className="PermalinkView-header"
    direction="column"
    justifyContent="center"
  >
    <Localized
      id="comments-permalinkView-youAreCurrentlyViewing"
    >
      <div
        className="PermalinkView-title"
      >
        You are currently viewing a single conversation
      </div>
    </Localized>
    <Localized
      id="comments-permalinkView-viewFullDiscussion"
    >
      <withPropsOnChange(Button)
        anchor={true}
        className="coral coral-permalink-viewFullDiscussionButton"
        color="primary"
        fontSize="medium"
        fontWeight="semiBold"
        href="http://localhost/link"
        onClick={[Function]}
        target="_parent"
        underline={true}
        variant="flat"
      >
        View full discussion
      </withPropsOnChange(Button)>
    </Localized>
  </ForwardRef(forwardRef)>
  <withPropsOnChange(CallOut)>
    <Localized
      id="comments-permalinkView-commentRemovedOrDoesNotExist"
    >
      This comment has been removed or does not exist.
    </Localized>
  </withPropsOnChange(CallOut)>
</ForwardRef(forwardRef)>
`;

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  className="PermalinkView-root coral coral-permalink coral-authenticated"
  size="double"
>
  <withContext(withMutation(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
    settings={Object {}}
    viewer={Object {}}
  />
  <ForwardRef(forwardRef)
    alignItems="center"
    className="PermalinkView-header"
    direction="column"
    justifyContent="center"
  >
    <Localized
      id="comments-permalinkView-youAreCurrentlyViewing"
    >
      <div
        className="PermalinkView-title"
      >
        You are currently viewing a single conversation
      </div>
    </Localized>
    <Localized
      id="comments-permalinkView-viewFullDiscussion"
    >
      <withPropsOnChange(Button)
        anchor={true}
        className="coral coral-permalink-viewFullDiscussionButton"
        color="primary"
        fontSize="medium"
        fontWeight="semiBold"
        href="http://localhost/link"
        onClick={[Function]}
        target="_parent"
        underline={true}
        variant="flat"
      >
        View full discussion
      </withPropsOnChange(Button)>
    </Localized>
  </ForwardRef(forwardRef)>
  <ForwardRef(forwardRef)>
    <withContext(withContext(createMutationContainer(Relay(ConversationThreadContainer))))
      comment={Object {}}
      settings={Object {}}
      story={Object {}}
      viewer={Object {}}
    />
    <div
      className="PermalinkView-replyList"
    >
      <withProps(Relay(ReplyListContainer))
        comment={Object {}}
        liveDirectRepliesInsertion={true}
        settings={Object {}}
        singleConversationView={true}
        story={Object {}}
        viewer={Object {}}
      />
    </div>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;
